[tool.poetry]
name = "aiomono"
version = "1.0.3"
description = "The asynchronous library for monobank API"
authors = ["Artur Boyun <arturboyun@gmail.com>"]
license = "MIT"
repository = "https://github.com/archiesir/aiomono"
homepage = "https://github.com/archiesir/aiomono"
readme = 'README.md'
keywords = [
    "monobank",
    "mono",
    "client",
    "api",
    "library",
    "aiohttp",
    "asyncio",
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.9.5"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
